--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">BluetoothAttendanceApp</string>
     <string name="action_settings">Settings</string>
+
+    <string name="button_refresh">Refresh Event List</string>
+    <string name="button_return01">Return</string>
+    <string name="button_return02">Cancel</string>
+    <string name="button_confirm">Confirm Event</string>
 </resources>
