--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
-    <string name="app_name">BluetoothAttendanceApp</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Bluetooth attendance app</string>
+
+    <string name="add">Add</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+
 </resources>
