--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bluetooth attendance app</string>
+    <string name="app_name">Bluetooth Attendance App</string>
 
     <string name="add">Add</string>
     <string name="edit">Edit</string>
@@ -7,11 +7,12 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="button_refresh">Refresh Event List</string>
+    <string name="button_refresh">Refresh List</string>
     <string name="button_return01">Return</string>
-    <string name="button_return02">Cancel</string>
     <string name="button_confirm">Confirm Event</string>
 
     <string name="button_host_main">Host Event</string>
     <string name="button_attend_main">Attend Event</string>
+
+
 </resources>
